rpa-builder/6.7/modules/ROOT/pages/toolbox-mail-operations-send-mail.adoc


= Send Mail

With the _Send Mail_ action step, you can send a mail with the SMTP
protocol. You can enter the recipient, the subject, or send attachments
just as with other mail programs.

You can only use the Send Mail action step within a Mail Session. You
enter the information required for the connection to the mail server in
the Mail Session.

[[html-body]]
== Sending mail with an HTML body

RPA Builder sends the content in *Body* over SMTP as plain text.

To send a message whose body is rendered as HTML, use one of these patterns:

* *Microsoft 365 via Microsoft Graph*  
+
--
. Call the Graph https://learn.microsoft.com/en-us/graph/api/user-sendmail[`sendMail` API^] with the xref:toolbox-network-rest-call.adoc[REST Call] action step. 
. In the JSON request body, set the message body `contentType` to `HTML`. 
. On REST Call, use the *Authentication* tab to send a bearer access token. +
Obtain or refresh tokens using xref:toolbox-variable-handling-credentials-for-oauth.adoc[Credentials for OAuth], depending on how your organization issues tokens for Graph. 
--
+
To read values from JSON responses across multiple calls, you can use xref:toolbox-variable-handling-json-query.adoc[Json Query].

* *SMTP with HTML via PowerShell*
. From the workflow, run `powershell.exe` (or run a script) using xref:toolbox-control-run-program.adoc[Run Program]. 
. In the script, use `System.Net.Mail.MailMessage` and set `IsBodyHtml` to `$true`, and configure SMTP and credentials to match your mail server and security policies.

== Properties

*Send Mail Settings*

*Body* Here, the content of the mail is displayed. A total of 3900
characters are available. RPA Builder sends the body as plain text. For HTML bodies, see <<html-body,Sending mail with an HTML body>>.

*Enter error state when a file does not exist* If this checkbox is selected and if
one of the attached files is not found in the production run, the Action
Step is ended with an error.

*First directory path* Path to the directory, in which the first file to be attached, is
located. Enter the absolute or relative path. If relative, then the path
refers to the variable _Base Path_.

*First file name* Contains the path to the first file that is to be attached.

*Second directory path* Path to the directory, in which the second file to be attached,
is located. Enter the absolute or relative path. If relative, then the
path refers to the variable _Base Path_.

*Second file name* Contains the path to the second file that is to be attached.

*Subject* Subject of the mail.

*Third directory path* Path to the directory, in which the third file to be attached, is
located. Enter the absolute or relative path. If relative, then the path
refers to the variable _Base Path_.

*Third file name* Contains the path to the third file that is to be attached.

== Inbound Variables

*To* Recipient.

*Cc* Carbon copy.

*Bcc* Blind carbon copy.

//link:#AS_SendMail_P_Subject[*Subject*]
*Subject* Subject of the mail.

//link:#AS_SendMail_P_FirstDirectoryPath[*First directory path*]
*First directory path* Path to the directory, in which the first file to be attached, is
located. Enter the absolute or relative path. If relative, then the path
refers to the variable _Base Path_.

//link:#AS_SendMail_P_FirstFileName[*First file name*]
*First file name* Contains the path to the first file that is to be attached.

//link:#AS_SendMail_P_SecondDirectoryPath[*Second directory path*]
*Second directory path* Path to the directory, in which the second file to be attached,
is located. Enter the absolute or relative path. If relative, then the
path refers to the variable _Base Path_.

//link:#AS_SendMail_P_SecondFileName[*Second file name*]
*Second file name* Contains the path to the second file that is to be attached.

//link:#AS_SendMail_P_ThirdDirectoryPath[*Third directory path*]
*Third directory path* Path to the directory, in which the third file to be attached, is
located. Enter the absolute or relative path. If relative, then the path
refers to the variable _Base Path_.

//link:#AS_SendMail_P_ThirdFileName[*Third file name*]
*Third file name* Contains the path to the third file that is to be attached.

//*link:#AS_SendMail_P_EnterErrorStateFileDoesNot[Enter error state when a file does not exist]*
*Enter error state when a file does not exist* If this checkbox is selected and if
one of the attached files is not found in the production run, the Action
Step is ended with an error.

== Outbound Variables

*IsSucceeded* Indicates whether an mail was sent successfully.

== Wizard

//image:media\image1.png[Ein Bild, das Text enthält. Automatischgenerierte Beschreibung,width=650,height=269]

The wizard is split into two tabs, *Message* and *Attachment*.

In the Message area, you can enter text under *Body*. RPA Builder sends the content as plain text, not as HTML. You can link the content with *Insert Available Variables*, assuming you defined variables in advance either using the Activity Parameters or the Workflow Based Variables. Select the encoding to use between UTF-8, UTF-16, Shift-JIS, and EUC-JP. To send HTML, see <<html-body,Sending mail with an HTML body>>. 

The pin variable
//with image:media\image2.png[image,width=217,height=19]in the attachments area
is only displayed if you have defined a variable
of type Bool using the Activity Parameters or the Workflow Based Variables.

In the Attachment area, you can add up to three attachments to the
mail. Under Directory path, you define the path to the new file to be
created. You can create an absolute path or a path relative to the _Base Path_.
//using the buttons image:media\image3.png[image,width=141,height=17] and image:media\image4.png[image,width=108,height=18].
The default value is %STWS_BASEPATH%. Select an existing path.
//using the button image:media\image5.png[image,width=18,height=18].
To construct the path, you can also insert variables from the workflow.
//To do this, click on the pin image:media\image6.png[image,width=17,height=24]and select one
//of the variables available.
////
You can find further information on the environment variables (Insert
Environment Variable) and script variables (Insert Script Variable) in
the Chapter entitled *Settings*.
////

You can find further explanations under <<Properties>>.

== See also

* xref:toolbox-mail-operations-mail-session.adoc[Mail Session]
* xref:toolbox-mail-operations-mail-session-oauth.adoc[Mail Session (OAuth)]
* xref:toolbox-network-rest-call.adoc[REST Call]
* xref:toolbox-variable-handling-credentials-for-oauth.adoc[Credentials for OAuth]
* xref:toolbox-variable-handling-json-query.adoc[Json Query]
* xref:toolbox-control-run-program.adoc[Run Program]
